perf: add microservices design patterns — java, jvm tuning and performance